cmake_minimum_required(VERSION 3.21)

PROJECT(SIGIF3 CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_FLAGS "-g")

set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/output/bin)
set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/output/lib)
LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/output/lib)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src/include
	${PROJECT_SOURCE_DIR}/XingZhi)

add_subdirectory(${PROJECT_SOURCE_DIR}/src)
add_subdirectory(${PROJECT_SOURCE_DIR}/XingZhi)
